fixed vertical alignment of spinner.gif

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -917,6 +917,7 @@ span#infotip img {
   padding-right: 5px !important;
   padding-top: 2px !important;
   padding-bottom: 2px !important;
+  vertical-align: bottom;
 }
 
 .continue div .return-spinner {
@@ -924,6 +925,7 @@ span#infotip img {
   padding-right: 0px !important;
   padding-top: 2px !important;
   padding-bottom: 2px !important;
+  vertical-align: bottom;
 }
 
 
